@@ -1,3 +1,11 @@
+globus-dsi-rest (0.12-1+gt6.@distro@) @distro@; urgency=low
+
+  * Fix bugs in partial read gridftp_op
+  * Propagate error from request instead of allowing curl error code
+    to override it.
+
+ -- Globus Toolkit <support@globus.org>  Thu, 14 Jul 2016 17:27:10 -0400
+
 globus-dsi-rest (0.11-1+gt6.@distro@) @distro@; urgency=low
 
   * Add handle cache
